图片功能完成

--- a/数据库.md
+++ b/数据库.md
@@ -124,9 +124,6 @@ CREATE TABLE review (
 
 ### 开发工具
 #### 后端springboot
-<<<<<<< HEAD
-#### 前端javascript（Hbuilder工具）
-=======
 #### 前端javascript（Hbuilder工具）
 
 ## 设计思路
@@ -146,4 +143,12 @@ CREATE TABLE review (
 
 ### 管理员界面设计
 禁用餐馆老板，新增管理员
->>>>>>> 7147365 (8.28)
+
+## 基础版完成，后续更改方案
+### 增加评价功能
+餐馆评价，骑手评价，菜品评价。先加上餐馆评价吧
+### 增加查询功能
+在餐馆和菜品处可加上任意字段查询
+### 数据库优化，增加索引
+### 增加图片上传机制
+餐馆和菜品图片可上传
